--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=card-recommend-project
-spring.datasource.url=jdbc:h2:mem:card
+#spring.datasource.url=jdbc:h2:mem:card
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comment=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.highlight_sql=true
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/card
-#spring.datasource.username=user123
-#spring.datasource.password=password
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.hibernate.ddl-auto=create
-#spring.flyway.baseline-on-migrate=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/card
+spring.datasource.username=user123
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.flyway.baseline-on-migrate=true
