--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.flyway.baseline-on-migrate=true
+
+# 32 bytes string (base64 encoded)
+jwt.secret=uz7MtIBd5PpX0knZuSB4RLlgFJ/v7ySsMofaMGZ1wec=
+# 43200000 == 12 hours
+jwt.expiration-time=43200000
